--- a/DNDMapMaker/DNDMapMaker.csproj
+++ b/DNDMapMaker/DNDMapMaker.csproj
@@ -61,6 +61,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="GridSpace.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -71,6 +72,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Map.cs" />
     <Compile Include="MapDesignWindow.xaml.cs">
       <DependentUpon>MapDesignWindow.xaml</DependentUpon>
     </Compile>
