--- a/DNDMapMaker/DNDMapMaker.csproj
+++ b/DNDMapMaker/DNDMapMaker.csproj
@@ -61,6 +61,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Entity.cs" />
     <Compile Include="GridSpace.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
